# oxideav-jpeg2000

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  dbg420.j2k
.github/workflows/: fuzz.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_j2k.rs  decode_jp2.rs  jp2_lossless_self_roundtrip.rs  mq_decoder.rs  openjpeg_encode_oxideav_decode.rs  oxideav_encode_openjpeg_decode.rs  parse_codestream.rs  parse_j2k_header.rs  parse_jp2.rs
fuzz/src/: lib.rs
src/: codestream.rs  decode.rs  dequant.rs  dwt.rs  encode.rs  error.rs  geometry.rs  ht.rs  ht_tables.rs  htenc.rs  image.rs  jp2.rs  lib.rs  mct.rs  mq.rs  mqenc.rs  packet.rs  progression.rs  reassemble.rs  registry.rs  t1.rs
src/decode/: bio.rs  dwt.rs  frame.rs  mod.rs  mqc.rs  t1.rs  tagtree.rs  tile.rs
src/decode/htj2k/: cleanup.rs  cxt_vlc.rs  cxt_vlc_tables.rs  magref.rs  mel.rs  mod.rs  sigprop.rs  streams.rs  tier2.rs  uvlc.rs
src/encode/: codestream.rs  dwt.rs  mod.rs  mqc.rs  t1.rs  tile.rs
src/encode/htj2k/: cleanup_enc.rs  cxt_vlc_enc.rs  magref_enc.rs  mel_enc.rs  mod.rs  sigprop_enc.rs  streams_enc.rs  tile_enc.rs  uvlc_enc.rs
tests/: baseline_decode.rs  decode_e2e.rs  encode_progression.rs  external_roundtrip.rs  ffmpeg_interop.rs  hh_blackbox_probe.rs  hh_probe_r9.rs  htj2k_decode.rs  htj2k_encoder.rs  htj2k_fbcot.rs  htj2k_lossy97_multi_band_fixture.rs  htj2k_markers.rs  htj2k_opj_interop.rs  htj2k_pixels.rs  htj2k_trace_doc_fixtures.rs  j3_reference.rs  jp2_wrapper.rs  lossy97_decode.rs  multilayer_decode.rs  multitile_decode.rs  opj_lossless_decode.rs  opj_t1_diag.rs  opj_t1_mqtrace.rs  poc_decode.rs  ppm_ppt_decode.rs  precincts_decode.rs  real_codestream.rs  rgb_mct_audit.rs  rgn_decode.rs  roundtrip_53.rs  roundtrip_97.rs  rpcl_decode.rs
tests/data/: bgr-cdef-16x16-ref.ppm  bgr-cdef-16x16.jp2  gray-16x16-mct0-53.j2k  gray-16x16-mct0-97.j2k  gray-17x13-53.j2k  gray-17x13-tiled-8x8-53.j2k  gray-32x32-97-ref.pgm  gray-32x32-97-ref2.pgm  gray-32x32-97.j2k  gray-32x32-97full-r1-ref.pgx  gray-32x32-97full-ref.pgm  gray-32x32-97full-ref2.pgm  gray-32x32-97full.j2k  gray-32x32-s12-53.j2k  gray-32x32-s8-53.j2k  gray-32x32-u16-53.j2k  gray-33x29-off31-53-r1-ref.pgx  gray-33x29-off31-53.j2k  gray-33x29-off31-97-ref.pgx  gray-33x29-off31-97.j2k  gray-33x29-off35-t17-prec16-pcrl-l3-53.j2k  gray-40x40-bypass-53.j2k  gray-40x40-bypass-97-ref.pgm  gray-40x40-bypass-97-ref2.pgm  gray-40x40-bypass-97.j2k  gray-40x40-bypass-tiled-53.j2k  gray-40x40-mode16-53.j2k  gray-40x40-mode17-53.j2k  gray-40x40-mode20-53.j2k  gray-40x40-mode48-53.j2k  gray-40x40-mode63-53.j2k  gray-40x40-multiprecinct-53.j2k  gray-40x40-termall-53.j2k  gray-45x39-t15-prec16-rpcl-53.j2k  gray-64x48-tp-interleaved-53.j2k  gray-64x64-multilayer-53-l1-ref.pgx  gray-64x64-multilayer-53-l3-ref.pgx  gray-64x64-multilayer-53-r1-ref.pgx  gray-64x64-multilayer-53.j2k  gray-64x64-plt-53.j2k  (+24 more)
tests/fixtures/: baseline.j2k  const32.j2k  fuzz_ht_emb_shift.j2c  fuzz_ht_magsgn_width.j2c  ht_8x8_rev_1decomp.j2c  ht_8x8_rev_1decomp.pgm  ht_deep16_rev.j2c  ht_deep16_rev_ref.pgm  ht_gray128_d4_multiblock.j2c  ht_gray128_d4_multiblock_ref.pgm  ht_gray32_d3.j2c  ht_gray32_d3_ref.pgm  ht_gray32_irv.j2c  ht_gray32_irv_ref.pgm  ht_gray64_d1_multiblock.j2c  ht_gray64_d1_multiblock_ref.pgm  ht_gray64_d3_irv_multiblock.j2c  ht_gray64_d3_irv_multiblock_ref.pgm  ht_pcrl_rgb_rev.j2c  ht_rgb24_rev.j2c  ht_rgb24_rev_ref.ppm  ht_rgb_t15_prec_cprl_rev.j2c  ht_t15_prec_off_pcrl_rev.j2c  ht_tileparts_r_rev.j2c  ht_tileparts_rc_rgb_rev.j2c  ht_tileparts_rc_rgb_rev_ref.ppm  ht_tiles_irv.j2c  ht_tiles_irv_ref.pgm  ht_tiles_offsets_rev.j2c  ht_tiles_offsets_rev_r2_ref.pgm  ht_tiles_offsets_rev_ref.pgm  ht_tiles_rev.j2c  ht_tiles_rev_r1_ref.pgm  ht_tlm_rev.j2c  ht_tlm_rev_ref.pgm  htj2k_32x32_input.pgm  htj2k_lossy97_32x32_nl1_lrcp.j2c  htj2k_lossy97_32x32_opj_ref.pgm  htj2k_lossy97_64x64_input.pgm  htj2k_lossy97_64x64_nl5_lrcp.j2c  (+66 more)
