[package]
name = "oxideav-jpeg2000"
version = "0.0.9"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-jpeg2000"
authors = ["Mark Karpeles"]
description = "Pure-Rust JPEG 2000 (J2K + JP2) codec — Part-1 codestream parser, MQ arithmetic coder, EBCOT tier-1 / tier-2 (LRCP / RLCP), 5/3 + 9/7 DWT (forward + inverse), forward + inverse RCT / ICT component transforms, ISOBMFF JP2 box wrapper. 5/3 lossless and 9/7 irreversible encoder."

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-jpeg2000"
keywords = ["multimedia", "image", "jpeg2000", "jp2", "codec"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
oxideav-core = { version = "0.1", optional = true }
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm. Optional + gated behind
# the `registry` feature so standalone image-library callers don't pull
# it in.
linkme = { version = "0.3", optional = true }

[features]
default = ["registry"]
# Pulls in `oxideav-core` and exposes the `Decoder` / `Encoder` trait
# surface plus the `register()` entry point. Disable for an
# `oxideav-core`-free build; the standalone `decode_jpeg2000` /
# `encode_jpeg2000` API plus the underlying `codestream` / `decode` /
# `encode` modules are still exposed.
registry = ["dep:oxideav-core", "dep:linkme"]
# High-Throughput JPEG 2000 (ISO/IEC 15444-15) decoder. Enables the
# FBCOT block-coding entropy decoder and the tier-2 packet walker that
# routes per-codeblock segments through it. When the feature is off the
# decoder still parses CAP/CPF markers and reports HTJ2K via `probe()`,
# but `J2kDecoder::send_packet` falls through to the classic-only path.
htj2k = []

[dev-dependencies]
# `dlopen` probe for libopenjp2 in `tests/external_roundtrip.rs`. The
# actual encode / decode is shelled out to `opj_compress` /
# `opj_decompress` (workspace policy bars OpenJPEG source from the dep
# tree; the CLI binaries are explicitly allowed as black-box
# validators). The dlopen check just confirms the library is installed
# so the test skips silently on hosts without OpenJPEG.
libloading = "0.8"

