[package]
name = "oxideav-jpeg2000"
version = "0.0.15"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-jpeg2000"
authors = ["Mark Karpeles"]
description = "Pure-Rust JPEG 2000 (J2K + JP2) codec — orphan-rebuild scaffold pending clean-room re-implementation."

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-jpeg2000"
keywords = ["multimedia", "image", "jpeg2000", "jp2", "codec"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
oxideav-core = { version = "0.1", optional = true }

[features]
default = ["registry"]
# Pulls in `oxideav-core` and exposes the `Decoder` / `Encoder` trait
# surface plus the `register()` entry point. Disable for an
# `oxideav-core`-free build; the scaffold still compiles and returns
# `Error::NotImplemented` for every public entry point.
registry = ["dep:oxideav-core"]
